--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,6 +67,9 @@ android {
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig signingConfigs.release
         }
+        debug {
+            signingConfig signingConfigs.debug
+        }
     }
 }
 
